# chesssubmit

./: LICENCE  README  pyproject.toml  setup.cfg  setup.py
chesssubmit/: __init__.py  submit.py
chesssubmit/core/: __init__.py  configuration.py  constants.py  submission.py
chesssubmit/gui/: __init__.py  configure.py  eventdetails.py  fileaccess.py  help_.py  leagues_submit.py  resultsroot.py  selectemail.py  sourceedit.py  submissionedit.py
chesssubmit/help_/: __init__.py  aboutresults.txt  guide.txt  keyboard.txt
